fixed hero section mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -405,6 +405,15 @@
 
   .textContainer {
     max-width: 640px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .buttonBox {
+    display: flex;
+    justify-content: center;
   }
 
   .uspWrapper {
